auto-test/tests/chapter_18/invalid_parse/extra_credit/labeled_struct_decl.c


int main(void) {
foo:
    struct s {
        int a;
    };
    return 0;
}